ags (0.7.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed automation editor drawing while setting value with a different lower bound than 0.0
	* fixed setting value on AgsAcceleration likewise above
	* fixed freed name string of AgsMachine
	* optimized drawing of values by ommiting already drawn values within AgsAutomationArea

ags (0.7.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented loading automation ports of LADSPA, DSSI and Lv2 plugins
	* implemented adding automation data
	* implemented removing automation data

ags (0.7.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audio_set_audio_channels() to do proper setup
	* fixed ags_lv2_bridge_set_audio_channels() and ags_dssi_bridge_set_audio_channels() to iterate correctly
	* fixed show of newly created AgsLine as calling ags_machine_resize_audio_channels()
	* fixed scroll of AgsNotebook

ags (0.7.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed worst memory leaks
	* refactored gsequencer_main.c because it was a mess
	* refactored peak callback to use g_timeout_add() giving better performance
	* improved timer support
	* provided example file

ags (0.7.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed format string

ags (0.7.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* removed wrong envelop information from notation in ags_simple_file.c
	* fixed Makefile.am to include aclocal.m4

ags (0.7.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsLadspaBridge, AgsDssiBridge and AgsLv2Bridge restore from XML
	* implemented AgsSimpleFile which is much faster than AgsFile
	* implemented AgsSimpleFileRead task for reading files using simple API
	* implemented AgsSimpleFileWrite task for writing files using simple API
	* implemented AgsSimpleAutosaveThread that makes use of AgsSimpleFile to save its files